Remove comments from transpiled typescript.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "noImplicitOverride": true,
       "outDir": "./build/dev",
       "preserveConstEnums": true,
+      "removeComments": true,
       "skipLibCheck": true,
       "sourceMap": true,
       "strict": true,
