--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "include": ["./src/main/ts/**/*.mts"],
     "compilerOptions":
     {
+      "allowSyntheticDefaultImports": true,
       "declaration": false,
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
