--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Employee manager.",
   "private": true,
-  "main": "build/dist/index.mjs",
+  "main": "./build/dist/index.mjs",
+  "types": "./build/dist/index.d.mts",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
     "build-dist": "tsc -p ./tsconfig.dist.json",
