--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "author": "Snap",
   "license": "ISC",
   "devDependencies": {
+    "@types/inquirer": "^9.0.6",
     "@types/node": "^20.8.7",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "inquirer": "^9.2.11",
     "mysql2": "^3.6.2",
     "tslib": "^2.6.2"
   }
