Add type:module to package.json.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Employee manager.",
   "private": true,
   "main": "./build/dist/index.mjs",
+  "type": "module",
   "engines": {
     "node": ">=18.0.0"
   },
