--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "inquirer": "^9.2.11",
     "mysql2": "^3.6.2",
     "tslib": "^2.6.2"
